[gd_scene load_steps=6 format=3 uid="uid://dpj5bi8y0l6ba"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_7eo4l"]

[sub_resource type="LabelSettings" id="LabelSettings_tucs0"]

[sub_resource type="Animation" id="Animation_vv0y2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.992157, 0.992157, 0.992157, 0.0156863)]
}

[sub_resource type="Animation" id="Animation_x0x58"]
resource_name = "pause"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.992157, 0.992157, 0.992157, 0.0156863), Color(0.992157, 0.992157, 0.992157, 0.992157)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a18mh"]
_data = {
"RESET": SubResource("Animation_vv0y2"),
"pause": SubResource("Animation_x0x58")
}

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_7eo4l")

[node name="Menu" type="ColorRect" parent="."]
process_mode = 3
visible = false
modulate = Color(0.992157, 0.992157, 0.992157, 0.0156863)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.184314, 0.168627, 1)

[node name="Container" type="ColorRect" parent="Menu"]
layout_mode = 0
offset_left = 43.0
offset_top = 8.0
offset_right = 1121.0
offset_bottom = 598.0
color = Color(0.188235, 0.25098, 0.227451, 1)

[node name="Label" type="Label" parent="Menu/Container"]
layout_mode = 0
offset_left = 287.0
offset_top = 80.0
offset_right = 791.0
offset_bottom = 119.0
theme_override_font_sizes/font_size = 40
text = "Paused"
label_settings = SubResource("LabelSettings_tucs0")
horizontal_alignment = 1
uppercase = true

[node name="Border" type="ColorRect" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.270588, 0.345098, 0.317647, 1)

[node name="TimeElapsed" type="ColorRect" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -95.0
offset_right = 50.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="Menu/Container/TimeElapsed"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 210.0
offset_right = 546.0
offset_bottom = 27.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Time: "
vertical_alignment = 1
uppercase = true

[node name="Value" type="Label" parent="Menu/Container/TimeElapsed"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -668.0
offset_right = -268.0
offset_bottom = 27.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.352941)
theme_override_font_sizes/font_size = 20
text = "0"

[node name="Snowmen" type="ColorRect" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -75.0
offset_right = 50.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="Menu/Container/Snowmen"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 210.0
offset_top = 40.0
offset_right = 354.0
offset_bottom = 67.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Snowmen: "
uppercase = true

[node name="Value" type="Label" parent="Menu/Container/Snowmen"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -668.0
offset_top = 40.0
offset_right = -268.0
offset_bottom = 67.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.352941)
theme_override_font_sizes/font_size = 20
text = "1"

[node name="Level" type="ColorRect" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -55.0
offset_right = 50.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="Menu/Container/Level"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 210.0
offset_top = 80.0
offset_right = 354.0
offset_bottom = 107.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Highest Level: "
uppercase = true

[node name="Value" type="Label" parent="Menu/Container/Level"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -668.0
offset_top = 80.0
offset_right = -268.0
offset_bottom = 107.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.352941)
theme_override_font_sizes/font_size = 20
text = "1"

[node name="ContinueButton" type="Button" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 265.0
offset_top = -205.0
offset_right = 525.0
offset_bottom = -115.0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Continue"

[node name="RestartButton" type="Button" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -533.0
offset_top = -205.0
offset_right = -263.0
offset_bottom = -115.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Restart"

[node name="SettingsButton2" type="Button" parent="Menu/Container"]
layout_mode = 0
offset_left = 663.0
offset_top = 182.0
offset_right = 735.0
offset_bottom = 239.0
text = "Settings"

[node name="HelpButton" type="Button" parent="Menu/Container"]
layout_mode = 0
offset_left = 666.0
offset_top = 264.0
offset_right = 734.0
offset_bottom = 308.0
text = "Help"

[node name="PauseMenuAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a18mh")
}

[connection signal="pressed" from="Menu/Container/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Menu/Container/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Menu/Container/SettingsButton2" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Menu/Container/HelpButton" to="." method="_on_help_button_pressed"]
